# pyedgarai

./: .gitignore  .readthedocs.yml  .releaserc  .replit  AUDIT.md  CHANGELOG.md  CONTRIBUTING.md  JsonConverter.bas  Module1.bas  Module2.bas  ORGANIZATION_SUMMARY.md  PLAN.md  README.md  STRUCTURE.md  api.py  api_tryout.txt  cik_company_names.json  comparables_analysis.md  create_user_manual.py  create_vba_code_endpoints.py  models.py  pages_0000072971.json  pyproject.toml  pytest.ini  scrape_apicalls.py  sic_definitions.md  tenks_banks.py  tutorial.ipynb  version.py
.github/: copilot-instructions.md
archive/: README.md
data/: subset_accounts.xlsx
docs/: Makefile  conf.py  example.ipynb  make.bat
notebooks/: tutorial.ipynb
scripts/: README.md
tests/: README.md  conftest.py  test_comparables.py  test_features.py  test_integration.py  test_market_data.py  test_pyedgarai.py  test_sec_client.py
vba/: AlpGet_Account_Wrapper.bas  AlpGet_Actions_Wrapper.bas  AlpGet_AllAccounts_Wrapper.bas  AlpGet_AnalystPriceTargets_Wrapper.bas  AlpGet_Balance_Sheet_Wrapper.bas  AlpGet_Balancesheet_Wrapper.bas  AlpGet_BasicInfo_Wrapper.bas  AlpGet_Calendar_Wrapper.bas  AlpGet_Capital_Gains_Wrapper.bas  AlpGet_CashFlow.bas  AlpGet_Cash_Flow_Wrapper.bas  AlpGet_Cashflow_Wrapper.bas  AlpGet_Cik_Names_Wrapper.bas  AlpGet_CleanName_Wrapper.bas  AlpGet_CompanyConcept_Wrapper.bas  AlpGet_CompanyFacts_Wrapper.bas  AlpGet_Company_Concept_Wrapper.bas  AlpGet_Comparables_Sic_Wrapper.bas  AlpGet_Comparables_Wrapper.bas  AlpGet_Dividends_Wrapper.bas  AlpGet_EarningsEstimate_Wrapper.bas  AlpGet_EarningsHistory_Wrapper.bas  AlpGet_Earnings_Wrapper.bas  AlpGet_Endpoint_Wrapper.bas  AlpGet_Fast_Info_Wrapper.bas  AlpGet_Financials_Wrapper.bas  AlpGet_GrowthEstimates_Wrapper.bas  AlpGet_History_Metadata_Wrapper.bas  AlpGet_Income_Stmt_Wrapper.bas  AlpGet_Incomestmt_Wrapper.bas  AlpGet_Info_Wrapper.bas  AlpGet_InsiderRosterHolders_Wrapper.bas  AlpGet_Isin_Wrapper.bas  (+70 more)
(+210 files in other folders)
