[tool.poetry]
name = "pyedgarai"
version = "0.1.0"
description = "A package for retrieving SEC filings and parse them using LLMs"
authors = ["Juan F. Imbet"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
