[tool.poetry]
name = "pyedgarai"
version = "0.0.1"
description = "A package for retrieving SEC filings and parse them using LLMs"
authors = ["Juan F. Imbet"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tqdm = "^4.66.5"
bs4 = "^0.0.2"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest-cov = "^5.0.0"
python-semantic-release = "^9.8.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = "pyproject.toml:version"
